# code-repair-with-llms

./: .env  .gitignore  Dockerfile  ObjectArrayCodec.java  README.md  backend.py  brainstorm_prototype.txt  code_chat_splitter.py  code_index.faiss  cve_scraper.py  docker-compose.yml  file.py  fixed_script.py  interface.py  java_split.txt  main.py  main2.py  repo_data.csv  repo_links.csv  requirements.txt  setup.cfg  setup.py  test  test.c  test.txt  utils.py
.docker/: Dockerfile
.github/workflows/: code-repair-app.yml
.gradio/flagged/: dataset1.csv
app/: main.py
app/api/: file_handler.py  router.py  session_manager.py  websocket.py  websocket_connection_manager.py  websocket_handler.py
app/api/endpoints/: file_upload.py  upload_file.py  upload_folder.py  upload_zip.py  user_upload.py
app/api/rest/: initiate_pipeline.py  router.py  user_upload.py
app/api/utils/: file_handler.py  folder_handler.py  socket_connection_manager.py  zip_handler.py
app/api/websocket/: websocket_connection_manager.py  websocket_handler.py
app/core/: file_handler.py  session_manager.py
app/tests/: test_user_upload.py  test_websocket.py
app/utils/: decode_pipeline_steps.py  file_handler.py  folder_handler.py  zip_handler.py
backend/source/model/: model.py
finetune/: finetune.py  test-ft.py
source/: main.py  pipeline.py
source/fault_loc/: fault_localization.py
source/model/: model.py  model_configs.json
source/pipeline/: pipeline.py
source/pipeline/rag/: example1.py  (+3 more)
tests/: test_user_upload.py  test_websocket.py
ui/: FrontPage.py
utils/: interface_utils.py
(+15 files in other folders)
