[metadata]
name = code-repair-with-llms
version = 0.1.0
description = A web application to resolve security vulnerabilities
author = Your Name
author_email = your.email@example.com

[options]
packages = find:
python_requires = >=3.10
install_requires =
    pytest>=7.0.0
    mypy>=1.0.0

[options.packages.find]
exclude =
    tests*

[mypy]
python_version = 3.10
ignore_missing_imports = True
strict = True
show_error_codes = True
namespace_packages = True
explicit_package_bases = True
disallow_untyped_defs = True
disallow_untyped_calls = True
warn_unused_ignores = True
warn_no_return = True
warn_redundant_casts = True

[mypy-tests.*]
disallow_untyped_defs = False

[tool:pytest]
testpaths = backend/tests
python_files = test_*.py
python_classes = Test
python_functions = test_*
addopts = -v -ra -q
pythonpath = .

[flake8]
max-line-length = 88
extend-ignore = E203
exclude = .git,__pycache__,build,dist

[coverage:run]
source = backend
omit = backend/tests/*
